kubernetes/backend/03-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: gitlab.praktikum-services.ru:5050/std-int-009-04/momo-store/momo-backend:1.0.2579081
          name: backend
          imagePullPolicy: IfNotPresent
          ports:
            - name: backend
              containerPort: 8081
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 6
      imagePullSecrets:
        - name: docker-config-secret
